fix gap between banner and about

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,4 +3,6 @@
     top: 99vh;
     left: 0;
     width: 100vw;
+    margin: 0;
+    margin-top: 0;
 }
