--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,6 +1,3 @@
-.banner {
-    background-color: #4682B4;
-}
 .hello {
     position: fixed;
     top: 45vh;
